# task-draft

./: .gitignore  CMakeLists.txt  README.md  test_main.cpp
include/: abst_task.hpp  task.hpp  task_delay.hpp  task_do.hpp  task_if.hpp  task_includes.hpp  task_jump.hpp  task_runloop.hpp  task_runloop_source.hpp  task_set.hpp  task_set_source.hpp  task_while.hpp
src/: abst_task.cpp  task.cpp  task_delay.cpp  task_do.cpp  task_if.cpp  task_jump.cpp  task_jump_2.cpp  task_set.cpp  task_while.cpp
